Clarifications and clean-up

--- a/Update Item.ipynb
+++ b/Update Item.ipynb
@@ -40,7 +40,7 @@
        "GIS @ <a href=\"https://devumich.maps.arcgis.com\">https://devumich.maps.arcgis.com</a>"
       ],
       "text/plain": [
-       "<arcgis.gis.GIS at 0x10be5b3c8>"
+       "<arcgis.gis.GIS at 0x11213f400>"
       ]
      },
      "execution_count": 2,
@@ -103,7 +103,7 @@
        "                        </a>\n",
        "                        <br/><img src='https://devumich.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/layers16.png' style=\"vertical-align:middle;\">Web Mapping Application by zimchris_devumich\n",
        "                        <br/>Last Modified: June 06, 2018\n",
-       "                        <br/>0 comments, 106 views\n",
+       "                        <br/>0 comments, 109 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -118,7 +118,6 @@
     }
    ],
    "source": [
-    "# item = gis.content.search(query=\"id:d226f46dd5d641c0abaa96e5c26e368d\") # Peter's map in production\n",
     "items = gis.content.search(query='id:' + storyMapId)\n",
     "storyMap = items[0]\n",
     "storyMap"
@@ -145,6 +144,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Content To Be Changed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -152,7 +158,7 @@
     {
      "data": {
       "text/plain": [
-       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-06T21:29:24.360917+00:00)</p>'"
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-06T21:34:59.234250+00:00)</p>'"
       ]
      },
      "execution_count": 6,
@@ -181,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "'2018-06-06T21:34:59.234250+00:00'"
+       "'2018-06-07T14:48:31.913840+00:00'"
       ]
      },
      "execution_count": 7,
@@ -212,7 +218,7 @@
     {
      "data": {
       "text/plain": [
-       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-06T21:34:59.234250+00:00)</p>'"
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T14:48:31.913840+00:00)</p>'"
       ]
      },
      "execution_count": 8,
@@ -333,6 +339,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T14:48:31.913840+00:00)</p>'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "storyMapData['values']['sections'][1]['foreground']['blocks'][0]['text']['value']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -341,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
