--- a/Update Item.ipynb
+++ b/Update Item.ipynb
@@ -5,7 +5,10 @@
    "metadata": {},
    "source": [
     "# Update ArcGIS Item Contents\n",
-    "## Connect to ArcGIS Online (AGOL)"
+    "\n",
+    "## Connect to ArcGIS Online (AGOL)\n",
+    "\n",
+    "### Import kartograafr Code"
    ]
   },
   {
@@ -14,12 +17,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pro = False"
+    "from main import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set Connection Mode\n",
+    "Set `pro` to `True` below to connect to AGOL using _ArcGIS Pro_, which requires local installation of that application."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pro = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -40,10 +60,10 @@
        "GIS @ <a href=\"https://devumich.maps.arcgis.com\">https://devumich.maps.arcgis.com</a>"
       ],
       "text/plain": [
-       "<arcgis.gis.GIS at 0x11213f400>"
+       "<arcgis.gis.GIS at 0x10b34f4e0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +74,6 @@
     "    gis = GIS('pro')\n",
     "\n",
     "else:\n",
-    "    from main import *\n",
     "    gis = arcgisUM.getArcGISConnection(config.ArcGIS.SECURITYINFO)\n",
     "\n",
     "print( 'Login successful!' )\n",
@@ -74,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -102,8 +121,8 @@
        "                        <a href='https://devumich.maps.arcgis.com/home/item.html?id=3e985c1fbbeb41c1970c58a8b78262a6' target='_blank'><b>Jewish Paths to Urbanization</b>\n",
        "                        </a>\n",
        "                        <br/><img src='https://devumich.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/layers16.png' style=\"vertical-align:middle;\">Web Mapping Application by zimchris_devumich\n",
-       "                        <br/>Last Modified: June 06, 2018\n",
-       "                        <br/>0 comments, 109 views\n",
+       "                        <br/>Last Modified: June 07, 2018\n",
+       "                        <br/>0 comments, 136 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -112,7 +131,7 @@
        "<Item title:\"Jewish Paths to Urbanization\" type:Web Mapping Application owner:zimchris_devumich>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +152,7 @@
     "if (storyMapData is None):\n",
     "    raise Exception('⚠️Unable to get StoryMap data!')\n",
     "    \n",
-    "storyMapData"
+    "# storyMapData # uncomment in JN to view all data"
    ]
   },
   {
@@ -152,16 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-06T21:34:59.234250+00:00)</p>'"
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T16:19:40.822402+00:00)</p>'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +200,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2018-06-07T14:48:31.913840+00:00'"
+       "'2018-06-07T16:20:10.397286+00:00'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,16 +231,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T14:48:31.913840+00:00)</p>'"
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T16:20:10.397286+00:00)</p>'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,25 +266,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Display New JSON"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "json.dumps(storyMapData)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Update StoryMap in AGOL\n",
-    "Notice the use of `StringIO` to avoid using files."
+    "> 💡The `arcgisUM.updateArcGISItem()` function uses `StringIO` to avoid writing data to files just for updating an ArcGIS item."
    ]
   },
   {
@@ -274,9 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from io import StringIO\n",
-    "with StringIO(json.dumps(storyMapData)) as f:\n",
-    "    storyMap.update(data=f.read())"
+    "arcgisUM.updateArcGISItem(storyMap, storyMapData)"
    ]
   },
   {
@@ -307,8 +307,8 @@
        "                        <a href='https://devumich.maps.arcgis.com/home/item.html?id=3e985c1fbbeb41c1970c58a8b78262a6' target='_blank'><b>Jewish Paths to Urbanization</b>\n",
        "                        </a>\n",
        "                        <br/><img src='https://devumich.maps.arcgis.com/home/js/jsapi/esri/css/images/item_type_icons/layers16.png' style=\"vertical-align:middle;\">Web Mapping Application by zimchris_devumich\n",
-       "                        <br/>Last Modified: June 06, 2018\n",
-       "                        <br/>0 comments, 109 views\n",
+       "                        <br/>Last Modified: June 07, 2018\n",
+       "                        <br/>0 comments, 136 views\n",
        "                    </div>\n",
        "                </div>\n",
        "                "
@@ -330,12 +330,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "storyMapData = storyMap.get_data()\n",
-    "storyMapData"
+    "# storyMapData # uncomment in JN to view all data"
    ]
   },
   {
@@ -346,7 +346,7 @@
     {
      "data": {
       "text/plain": [
-       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T14:48:31.913840+00:00)</p>'"
+       "'<p class=\"block\">Beginning in the 19th century Jews from all over the Pale of Settlements began coming to Odessa (2018-06-07T16:20:10.397286+00:00)</p>'"
       ]
      },
      "execution_count": 14,
