Remove unneeded logger settings

--- a/queries.ipynb
+++ b/queries.ipynb
@@ -10,7 +10,9 @@
     "## _⚠️ WARNING ⚠️_\n",
     "> Whenever this notebook is updated, before committing changes back to the git repository, **_remove all output_** from cells.  The output may contain PII about students, which should not be made public.\n",
     "\n",
-    "## Import kartograafr Code"
+    "## Import kartograafr Code\n",
+    "\n",
+    "> 💡**_Note_**: For some reason, in `main.py` the line `logger = None` needs to be commented out when used in this notebook.  It doesn't affect how the program runs outside of the notebook, though."
    ]
   },
   {
@@ -21,10 +23,7 @@
    "source": [
     "from main import *\n",
     "\n",
-    "# TODO: Move logging init to function, which is called by main()\n",
-    "logger = logging.getLogger(__name__)\n",
-    "logToStdOut()\n",
-    "logger"
+    "# TODO: Move logging init to function, which is called by main()"
    ]
   },
   {
